; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/arc/extr_emac_mdio.c_arc_mdio_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/arc/extr_emac_mdio.c_arc_mdio_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_bus = type { %struct.arc_emac_priv* }
%struct.arc_emac_priv = type { %struct.arc_emac_mdio_bus_data }
%struct.arc_emac_mdio_bus_data = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_bus*)* @arc_mdio_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arc_mdio_reset(%struct.mii_bus* %0) #0 {
  %2 = alloca %struct.mii_bus*, align 8
  %3 = alloca %struct.arc_emac_priv*, align 8
  %4 = alloca %struct.arc_emac_mdio_bus_data*, align 8
  store %struct.mii_bus* %0, %struct.mii_bus** %2, align 8
  %5 = load %struct.mii_bus*, %struct.mii_bus** %2, align 8
  %6 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %5, i32 0, i32 0
  %7 = load %struct.arc_emac_priv*, %struct.arc_emac_priv** %6, align 8
  store %struct.arc_emac_priv* %7, %struct.arc_emac_priv** %3, align 8
  %8 = load %struct.arc_emac_priv*, %struct.arc_emac_priv** %3, align 8
  %9 = getelementptr inbounds %struct.arc_emac_priv, %struct.arc_emac_priv* %8, i32 0, i32 0
  store %struct.arc_emac_mdio_bus_data* %9, %struct.arc_emac_mdio_bus_data** %4, align 8
  %10 = load %struct.arc_emac_mdio_bus_data*, %struct.arc_emac_mdio_bus_data** %4, align 8
  %11 = getelementptr inbounds %struct.arc_emac_mdio_bus_data, %struct.arc_emac_mdio_bus_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %1
  %15 = load %struct.arc_emac_mdio_bus_data*, %struct.arc_emac_mdio_bus_data** %4, align 8
  %16 = getelementptr inbounds %struct.arc_emac_mdio_bus_data, %struct.arc_emac_mdio_bus_data* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @gpiod_set_value_cansleep(i64 %17, i32 1)
  %19 = load %struct.arc_emac_mdio_bus_data*, %struct.arc_emac_mdio_bus_data** %4, align 8
  %20 = getelementptr inbounds %struct.arc_emac_mdio_bus_data, %struct.arc_emac_mdio_bus_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @msleep(i32 %21)
  %23 = load %struct.arc_emac_mdio_bus_data*, %struct.arc_emac_mdio_bus_data** %4, align 8
  %24 = getelementptr inbounds %struct.arc_emac_mdio_bus_data, %struct.arc_emac_mdio_bus_data* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @gpiod_set_value_cansleep(i64 %25, i32 0)
  br label %27

27:                                               ; preds = %14, %1
  ret i32 0
}

declare dso_local i32 @gpiod_set_value_cansleep(i64, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
